--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h2>Our wiki</h2>
               </div>
               <div class="box-text">
-                <p>Literally a glorified collection of HTML files. Procrastination is a cruel mistress.</p>
+                <p>Literally a glorified collection of HTML files. Procrastination is a cruel mistress.<br/>¯\_(ツ)_/¯</p>
                 <a class="btn-black" href="wiki-index.html">Made with love</a>
               </div>
             </div>
