Fixed navigation menu highlight
before, the navigation would stay on "index" as active

--- a/faq.html
+++ b/faq.html
@@ -42,9 +42,9 @@
           <!-- Responsive Navbar -->
           <div id="nav-main">
             <ul id="menu" class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="wiki-index.html">Knowledge Base</a></li>
-              <li><a href="faq.html">Faq</a></li>
+              <li class="active"><a href="faq.html">Faq</a></li>
               <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
             </ul>
           </div><!--/.nav-collapse -->
