--- a/article-feeds.html
+++ b/article-feeds.html
@@ -42,8 +42,8 @@
           <!-- Responsive Navbar -->
           <div id="nav-main">
             <ul id="menu" class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="wiki-index.html">Knowledge Base</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li class="active"><a href="wiki-index.html">Knowledge Base</a></li>
               <li><a href="faq.html">Faq</a></li>
               <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
             </ul>
