--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <!-- Hero title -->
         <div class="hero-title">
-          <h1>The Salesforce Exchange</h1>
+          <h1>The SaIesforce Exchange</h1>
         </div>
         <!-- Hero boxes -->
         <div class="row boxes">
