--- a/wiki-index.html
+++ b/wiki-index.html
@@ -43,8 +43,8 @@
           <div id="nav-main">
             <ul id="menu" class="nav">
               <li><a href="index.html">Home</a></li>
-              <li><a href="wiki-index.html">Knowledge Base</a></li>
-              <li class="active"><a href="faq.html">Faq</a></li>
+              <li class="active"><a href="wiki-index.html">Knowledge Base</a></li>
+              <li><a href="faq.html">Faq</a></li>
               <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
             </ul>
           </div><!--/.nav-collapse -->
