Added Summer 18 RN
Why not put them here as well

--- a/wiki-index.html
+++ b/wiki-index.html
@@ -98,7 +98,7 @@
                 Salesforce things
               </h2>
               <ul class="category-posts">    
-                <li><i class="icon-file"></i> <a href="article-conventions-fields.html">Field naming conventions</a></li>
+                <li><i class="icon-file"></i> <a href="article-summer18.html">Summer 18 Abridged</a></li>
               </ul>
             </div>
 
