Cleaned up Summer 18, changed homepage order
Puts Discord in the middle of the screen

--- a/article-summer18.html
+++ b/article-summer18.html
@@ -186,7 +186,7 @@ That said, <a href="https://resources.docs.salesforce.com/214/latest/en-us/sfdc/
 <p><strong>SERVICE CLOUD</strong>    </p>
 
 <ul>
-<li><a href="https://resources.docs.salesforce.com/214/latest/en-us/sfdc/pdf/salesforce_summer18_release_notes.pdf#rn_service_bots">here</a>Salesforce now has automated answering for Live Agent.</a> Called Einstein Bots, they are available through LEX setup only (but work server-side, so you can switch back to classic afterwards) and seem to require use of <a href="https://help.salesforce.com/articleView?id=snapins_chat_overview.htm">Snap-Ins chat</a>) instead of standard LA buttons. More info needed. Help page should be <a href="https://help.salesforce.com/articleView?id=bots_service_intro.htm">available here</a> after summer18 comes out.</li>
+<li> <a href="https://resources.docs.salesforce.com/214/latest/en-us/sfdc/pdf/salesforce_summer18_release_notes.pdf#rn_service_bots" target="_blank">Salesforce now has automated answering for Live Agent.</a> Called Einstein Bots, they are available through LEX setup only (but work server-side, so you can switch back to classic afterwards) and seem to require use of <a href="https://help.salesforce.com/articleView?id=snapins_chat_overview.htm" target="_blank">Snap-Ins chat</a> instead of standard LA buttons. More info needed. Help page should be <a href="https://help.salesforce.com/articleView?id=bots_service_intro.htm" target="_blank">here</a> after summer18 comes out.</li>
 
 <li>You can Set Default Email Field Values with Apex in Lightning Experience. Their title is clear enough :)</li>
 
