Capitalized the L in FlOWS

--- a/article-summer18.html
+++ b/article-summer18.html
@@ -137,7 +137,7 @@ Title, and Update Your <ui:button> Overrides for Some Lightning Community Compon
 That said, <a href="https://resources.docs.salesforce.com/214/latest/en-us/sfdc/pdf/salesforce_summer18_release_notes.pdf#rn_security_other_changes__rn_security_sandbox_domain_update">My Domain URLs change in Sandbox</a> (Critical Update), you might want to check that out.</li>
 </ul>
 
-<p><strong>FlOWS AND PROCESSES</strong></p>
+<p><strong>FLOWS AND PROCESSES</strong></p>
 
 <p>For once these deserve their own section    </p>
 
