Added GDPR Stuff
GDPR section and link

--- a/wiki-index.html
+++ b/wiki-index.html
@@ -99,11 +99,22 @@
               </h2>
               <ul class="category-posts">    
                 <li><i class="icon-file"></i> <a href="article-summer18.html">Summer 18 Abridged</a></li>
+                <li><i class="icon-file"></i> <a href="https://blog.varonis.com/gdpr-requirements-list-in-plain-english/">GDPR in plain english</a></li>
               </ul>
             </div>
 
           </div>
+          <div class="row knowledge-base-row">
+            <div class="span3">
+              <h2>
+                GDPR
+              </h2>
+              <ul class="category-posts">    
+                <li><i class="icon-file"></i> <a href="https://blog.varonis.com/gdpr-requirements-list-in-plain-english/">GDPR in plain english</a></li>
+              </ul>
+            </div>
 
+          </div>
         </div>
     <footer>
       <!-- Sub footer -->
