Fix page footer
missing divs

--- a/wiki-index.html
+++ b/wiki-index.html
@@ -130,6 +130,9 @@
 
           </div>
         </div>
+      </div>
+    </div>
+  </div>
     <footer>
       <!-- Sub footer -->
       <div class="sub-footer">
