CSS changes and Field Conventions
Changed css a bit for wiki
Adde conventions pdfs and one html page

--- a/wiki-index.html
+++ b/wiki-index.html
@@ -99,6 +99,7 @@
               </h2>
               <ul class="category-posts">    
                 <li><i class="icon-file"></i> <a href="article-summer18.html">Summer 18 Abridged</a></li>
+                <li><i class="icon-file"></i> <a href="article-convfields.html">Field Naming Conventions</a></li>                
               </ul>
             </div>
 
