--- a/article-feeds.html
+++ b/article-feeds.html
@@ -93,35 +93,37 @@
             <div class="page-main">
               <p>This is a collection of blogs we like reading and articles are posted to our Discord server using a bot. If your blog was added here and you wish for us to remove this link, please contact us on Discord, or do a pull request on github for this page.</p>
               <ul style="list-style-type:none">
-                <li><a href="https://teachmesalesforce.wordpress.com/feed/">Teach Me Salesforce</a></li>
-                <li><a href="https://albasfdc.wordpress.com/feed/rss">My Salesforce adventure - Alba A.Rivas</a></li>
-                <li><a href="https://agarciaodeian.com/feed">Agustina Odeian</a></li>
-                <li><a href="http://www.verticalcoder.com/feed/">Vertical Coder</a></li>
-                <li><a href="https://cloudyabhi.blogspot.de/feeds/posts/default">cloudy abhi ☁ </a></li>
-                <li><a href="http://blog.jeffdouglas.com/rss/">Jeff Douglas</a></li>
-                <li><a href="https://automationchampion.com/feed/">Automation Champion</a></li>
-                <li><a href="http://www.fishofprey.com/feeds/posts/default">Fish of Prey</a></li>
-                <li><a href="http://www.salesforceben.com/feed">Salesforce Ben</a></li>
-                <li><a href="https://andyinthecloud.com/feed">Andy In The Cloud</a></li>
-                <li><a href="http://www.jitendrazaa.com/blog/feed">Jitendra Zaa</a></li>
-                <li><a href="https://salesforcesidekick.com/rss">Salesforce Sidekick</a></li>
-                <li><a href="http://cloudanalogy.com/feed/">Cloud Analogy</a></li>
-                <li><a href="http://www.sfdc99.com/feed/">SF99</a></li>
-                <li><a href="https://blog.enree.co/feed">Nerd @ Work</a></li>
-                <li><a href="http://sfdcmonkey.com/feed/">SFDC Monkey</a></li>
-                <li><a href="https://douglascayers.com/feed/">Douglas C. Ayers</a></li>
-                <li><a href="http://meighanrockssf.com/feed/">Because This Should Be Easy</a></li>
-                <li><a href="https://cloud4good.com/feed/">Cloud 4 Good</a></li>
-                <li><a href="https://developer.salesforce.com/blogs/feed">Official Salesforce Developer Blog</a></li>
-                <li><a href="https://salesforcequest.com/feed/">Salesforce Quest - James Goerke</a></li>
-                <li><a href="http://thesfdcgeek.com/rss">The SFDC Geek</a></li>
-                <li><a href="https://feeds.feedburner.com/jessealtman">Jesse Altman</a></li>
-                <li><a href="https://www.aboveandbeyondcloud.com/rss/">Above and Beyond Cloud</a></li>
-                <li><a href="https://bobbuzzard.blogspot.de/feeds/posts/default">Bob Buzzard Blog</a></li>
-                <li><a href="http://empaua.com/blog/feed/">Empaua</a></li>
-                <li><a href="http://biswajeetsamal.com/blog/feed/">Biswajeet Samal's Blog</a></li>
-                <li><a href="http://blog.mirketa.com/feed/">Mirketa</a></li>
-                <li><a href="http://www.adhiman.com/feed/">Akshay Dhiman</a></li>
+                <li><a href="https://teachmesalesforce.wordpress.com">Teach Me Salesforce</a><a href="https://teachmesalesforce.wordpress.com/feed/"> <i class="fas fa-rss-square"></i></a></li>
+                <li><a href="https://albasfdc.wordpress.com">My Salesforce adventure - Alba A.Rivas</a><a href="https://albasfdc.wordpress.com/feed/rss"> <i class="fas fa-rss-square"></i></a></li>
+                <li><a href="https://agarciaodeian.com">Agustina Odeian</a><a href="https://agarciaodeian.com/feed"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://www.verticalcoder.com">Vertical Coder</a><a href="http://www.verticalcoder.com/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="https://cloudyabhi.blogspot.de">cloudy abhi ☁ </a><a href="http://www.verticalcoder.com/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://blog.jeffdouglas.com">Jeff Douglas</a><a href="http://blog.jeffdouglas.com/rss/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="https://automationchampion.com">Automation Champion</a><a href="http://blog.jeffdouglas.com/rss/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://www.fishofprey.com">Fish of Prey</a><a href="http://www.fishofprey.com/feeds/posts/default"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://www.salesforceben.com">Salesforce Ben</a><a href="http://www.salesforceben.com/feed"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="https://andyinthecloud.com">Andy In The Cloud</a><a href="https://andyinthecloud.com/feed"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://www.jitendrazaa.com">Jitendra Zaa</a><a href="http://www.jitendrazaa.com/blog/feed"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="https://salesforcesidekick.com">Salesforce Sidekick</a><a href="https://salesforcesidekick.com/rss"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://cloudanalogy.com">Cloud Analogy</a><a href="http://cloudanalogy.com/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://www.sfdc99.com">SF99</a><a href="http://www.sfdc99.com/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="https://blog.enree.co">Nerd @ Work</a><a href="https://blog.enree.co/feed"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://sfdcmonkey.com">SFDC Monkey</a><a href="http://sfdcmonkey.com/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="https://douglascayers.com">Douglas C. Ayers</a><a href="https://douglascayers.com/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://meighanrockssf.com">Because This Should Be Easy</a><a href="http://meighanrockssf.com/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="https://cloud4good.com">Cloud 4 Good</a><a href="https://cloud4good.com/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="https://developer.salesforce.com">Official Salesforce Developer Blog</a><a href="https://developer.salesforce.com/blogs/feed"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="https://salesforcequest.com">Salesforce Quest - James Goerke</a><a href="https://salesforcequest.com/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://thesfdcgeek.com">The SFDC Geek</a><a href="http://thesfdcgeek.com/rss"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://jessealtman.com/">Jesse Altman</a><a href="https://feeds.feedburner.com/jessealtman"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="https://www.aboveandbeyondcloud.com">Above and Beyond Cloud</a><a href="https://www.aboveandbeyondcloud.com/rss/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="https://bobbuzzard.blogspot.de">Bob Buzzard Blog</a><a href="https://bobbuzzard.blogspot.de/feeds/posts/default"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://empaua.com">Empaua</a><a href="http://empaua.com/blog/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://biswajeetsamal.com">Biswajeet Samal's Blog</a><a href="http://biswajeetsamal.com/blog/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://blog.mirketa.com">Mirketa</a><a href="http://blog.mirketa.com/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="http://www.adhiman.com">Akshay Dhiman</a><a href="http://www.adhiman.com/feed/"> <i class="fas fa-rss-square"></i></a></li></li>
+                <li><a href="https://www.cloudgiants.com">Cloud Giants</a><a href="https://www.cloudgiants.com/blog-detailed?format=rss"> <i class="fas fa-rss-square"></i></a></li>
+                
               </ul> 
             </div>
           </article>
