--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <i class="fas fa-archive"></i>
               </div>
               <div class="box-title">
-                <h2>Documentation</h2>
+                <h2>Docs</h2>
               </div>
               <div class="box-text">
                 <p>No ads, no bullshit, just indexed, searchable implementation guides — including the infamous 8000 page sf.pdf</p>
