--- a/wiki-index.html
+++ b/wiki-index.html
@@ -99,7 +99,8 @@
               </h2>
               <ul class="category-posts">    
                 <li><i class="icon-file"></i> <a href="article-summer18.html">Summer 18 Abridged</a></li>
-                <li><i class="icon-file"></i> <a href="article-convfields.html">Field Naming Conventions</a></li>                
+                <li><i class="fas fa-book"></i> <a href="article-convfields.html">Field Naming Conventions</a></li>                
+                <li><i class="fas fa-book"></i> <a href="article-convwf.html">Workflow Naming Conventions</a></li>                
               </ul>
             </div>
 
@@ -123,8 +124,7 @@
                 <li><i class="icon-file"></i> <a href="https://help.salesforce.com/servlet/servlet.FileDownload?file=015300000035KkMAAU">Official Salesforce Customer For Life Scoping Questionnaire</a></li>
                 <li><i class="icon-file"></i> <a href="content/SF_OrderOfExecution.pdf">Salesforce Order of Execution - by @Alexdot </a></li>
                 <li><i class="icon-file"></i> <a href="https://developer.salesforce.com/page/Architect_Core_Resources">Official Salesforce Architect Resources</a></li>
-
-
+                <li><i class="icon-file"></i> <a href="https://sites.google.com/view/flowunofficial">Flow Unofficial Resources by Alex Edelstein, including premade components and tutorials</a></li>
               </ul>
             </div>
 
