Changed some icons so it looks prettier
title

--- a/wiki-index.html
+++ b/wiki-index.html
@@ -89,8 +89,8 @@
                 Meta Stuff
               </h2>
               <ul class="category-posts">    
-                <li><i class="icon-file"></i> <a href="article-feeds.html">Blogs list</a></li>
-                <li><i class="icon-file"></i> <a href="article-basic.html">Discord server basic info</a></li>
+                <li><i class="fab fa-blogger"></i> <a href="article-feeds.html">Blogs list</a></li>
+                <li><i class="fas fa-book"></i> <a href="article-basic.html">Discord server basic info</a></li>
               </ul>
             </div>
             <div class="span3">
@@ -98,7 +98,7 @@
                 Salesforce things
               </h2>
               <ul class="category-posts">    
-                <li><i class="icon-file"></i> <a href="article-summer18.html">Summer 18 Abridged</a></li>
+                <li><i class="fas fa-font"></i> <a href="article-summer18.html">Summer 18 Abridged</a></li>
                 <li><i class="fas fa-book"></i> <a href="article-convfields.html">Field Naming Conventions</a></li>                
                 <li><i class="fas fa-book"></i> <a href="article-convwf.html">Workflow Naming Conventions</a></li>                
               </ul>
@@ -120,11 +120,11 @@
                 External Resources
               </h2>
               <ul class="category-posts">    
-                <li><i class="icon-file"></i> <a href="https://docs.google.com/presentation/d/1J4N6oZ0sKdHE70ymmqres1_TA008yesrhOZPSKQje_g">Salesforce DX Basic intro — Courtesy of Alex Brausewetter, CoFounder of BlueCanvas </a></li>
-                <li><i class="icon-file"></i> <a href="https://help.salesforce.com/servlet/servlet.FileDownload?file=015300000035KkMAAU">Official Salesforce Customer For Life Scoping Questionnaire</a></li>
-                <li><i class="icon-file"></i> <a href="content/SF_OrderOfExecution.pdf">Salesforce Order of Execution - by @Alexdot </a></li>
-                <li><i class="icon-file"></i> <a href="https://developer.salesforce.com/page/Architect_Core_Resources">Official Salesforce Architect Resources</a></li>
-                <li><i class="icon-file"></i> <a href="https://sites.google.com/view/flowunofficial">Flow Unofficial Resources by Alex Edelstein, including premade components and tutorials</a></li>
+                <li><i class="fas fa-globe"></i> <a href="https://docs.google.com/presentation/d/1J4N6oZ0sKdHE70ymmqres1_TA008yesrhOZPSKQje_g">Salesforce DX Basic intro — Courtesy of Alex Brausewetter, CoFounder of BlueCanvas </a></li>
+                <li><i class="fas fa-globe"></i> <a href="https://help.salesforce.com/servlet/servlet.FileDownload?file=015300000035KkMAAU">Official Salesforce Customer For Life Scoping Questionnaire</a></li>
+                <li><i class="fas fa-globe"></i> <a href="content/SF_OrderOfExecution.pdf">Salesforce Order of Execution - by @Alexdot </a></li>
+                <li><i class="fas fa-globe"></i> <a href="https://developer.salesforce.com/page/Architect_Core_Resources">Official Salesforce Architect Resources</a></li>
+                <li><i class="fas fa-globe"></i> <a href="https://sites.google.com/view/flowunofficial">Flow Unofficial Resources by Alex Edelstein, including premade components and tutorials</a></li>
               </ul>
             </div>
 
