Added Summer18 Addendum
due to changes in RN

--- a/article-summer18.html
+++ b/article-summer18.html
@@ -247,6 +247,39 @@ That said, <a href="https://resources.docs.salesforce.com/214/latest/en-us/sfdc/
 <li>Trigger Custom Application Logic When Users Log Out (Beta). Finally you can force all Oauth sessions to close. And delete all of Karen's data after she logs out. You know why, Karen.</li>
 </ul>
 
+
+<p><strong>Addendums due to changes before release:</strong></p>
+
+<p><strong>GENERAL STUFF</strong></p>
+<ul>
+<li> You can Override the New Event Button on the Calendar in Lightning Experience.
+Only overrides with a Lightning component to customize the action. Action must contain ONLY standard fields.
+Only replaces the button, not the actual action, so other places where the action is shown uses the standard one.
+</li>
+<li> Custom Buttons Used as Actions on Page Layouts Can No Longer Be Deleted
+Prevents corruption. Generally happens when you had a button, you put it in LEX, then you deleted the button and didn't realize that the page layout still referenced it.
+</li>
+<li> Scanned PDF Previews in Files can now be set to display either as SVG (standard) or JPG.
+</li>
+<li>For anyone who has the EinsteinBuilderFree license, <a href="https://releasenotes.docs.salesforce.com/en-us/summer18/release-notes/rn_einstein_prediction_builder.htm#rn_einstein_prediction_builder
+" target="_blank">Einstein Prediction Builder</a> allows you to try your hand at AI without coding.
+<br/><br/>
+You can test it by signing up <a href="https://developer.salesforce.com/promotions/orgs/einsteinbuilder">here</a>
+</li>
+<li> RSSBot spoiled this one for Discord Users but Convert JavaScript Buttons to Lightning-Friendly Alternatives With the <a href="https://lightning-configuration.salesforce.com/" target="_blank">Lightning Experience Configuration Converter</a>
+</li>
+<li>
+  All Groups and PE Orgs created after Summer 18 are LEX Only and will require SF support to activate Classic
+</li>
+<li>
+Einstein Activity Capture free with Sales Cloud</li>
+
+</ul>
+<p><strong>PARDOT</strong></p>
+<ul>
+  <li>
+- Permanently Delete Prospects has been activated for all orgs, instead of going to the recycle bin.
+</li>
 <hr />
 
 <p>This abridged version was graciously written up by the <strong>SF Discord</strong> https://discord.gg/JG4Bc4q<br/>
