Small Wiki Overhaul
Changed wiki index to be prettier
Added old abridged RN
Added date literals

--- a/wiki-index.html
+++ b/wiki-index.html
@@ -82,7 +82,7 @@
     <!-- PAGE CONTENT -->
     <div id="wrap" class="container" role="document">
       <div id="content" class="row">
-        <div id="main" class="knowledge-base span9" role="main">
+        <div id="main" class="knowledge-base span10" role="main">
           <div class="row knowledge-base-row">
             <div class="span3">
               <h2>
@@ -95,16 +95,24 @@
             </div>
             <div class="span3">
               <h2>
-                Salesforce things
+                Abridged RN
               </h2>
               <ul class="category-posts">    
                 <li><i class="fas fa-font"></i> <a href="article-summer18.html">Summer 18 Abridged</a></li>
+                <li><i class="fas fa-font"></i> <a href="article-spring18.html">Spring 18 Abridged</a></li>                
+                <li><i class="fas fa-font"></i> <a href="article-winter18.html">Winter 18 Abridged</a></li>                
+              </ul>
+            </div>
+            <div class="span3">
+              <h2>
+  Conventions              </h2>
+              <ul class="category-posts">    
                 <li><i class="fas fa-book"></i> <a href="article-convfields.html">Field Naming Conventions</a></li>                
                 <li><i class="fas fa-book"></i> <a href="article-convwf.html">Workflow Naming Conventions</a></li>                
                 <li><i class="fas fa-book"></i> <a href="article-convvr.html">Validation Rule Naming Conventions</a></li>                
                 <li><i class="fas fa-book"></i> <a href="article-convpb.html">Process Builder Naming Conventions</a></li>                
               </ul>
-            </div>
+            </div>            
 
           </div>
           <div class="row knowledge-base-row">
@@ -113,11 +121,19 @@
                 GDPR
               </h2>
               <ul class="category-posts">    
-                <li><i class="icon-file"></i> <a href="https://blog.varonis.com/gdpr-requirements-list-in-plain-english/">GDPR in plain english</a></li>
+                <li><i class="fas fa-balance-scale"></i> <a href="https://blog.varonis.com/gdpr-requirements-list-in-plain-english/">GDPR in plain english</a></li>
+              </ul>
+            </div>
+            <div class="span3">
+              <h2>
+                Salesforce Stuff
+              </h2>
+              <ul class="category-posts">    
+                <li><i class="fas fa-database"></i> <a href="article-datelit.html">Date Literals</a></li>
               </ul>
             </div>
           <div class="row knowledge-base-row">
-            <div class="span3">
+            <div class="span10">
               <h2>
                 External Resources
               </h2>
