Removed useless File
removed autosave

--- a/wiki-index.html
+++ b/wiki-index.html
@@ -132,6 +132,8 @@
                 <li><i class="fas fa-database"></i> <a href="article-datelit.html">Date Literals</a></li>
               </ul>
             </div>
+                      <div class="row knowledge-base-row">
+</div>
           <div class="row knowledge-base-row">
             <div class="span10">
               <h2>
