Added rants to wiki page
Added the golive and data migration rants to the wiki

--- a/wiki-index.html
+++ b/wiki-index.html
@@ -129,6 +129,8 @@
                 Salesforce Stuff
               </h2>
               <ul class="category-posts">    
+                <li><i class="far fa-angry"></i> <a href="article-datamig.html">Rant - Data Changes in Prod</a></li>
+                <li><i class="far fa-angry"></i> <a href="article-golive.html">Rant - Going Live</a></li>
                 <li><i class="fas fa-database"></i> <a href="article-datelit.html">Date Literals</a></li>
                 <li><i class="fas fa-database"></i> <a href="article-caseref.html">Case Reference Link</a></li>
                 <li><i class="fas fa-database"></i> <a href="article-regex.html">Useful Regex</a></li>
