--- a/article-summer18.html
+++ b/article-summer18.html
@@ -72,7 +72,7 @@
       <div class="container">
         <div class="page-header row">
           <div class="span8">
-            <h1>The Salesforce Exchange wiki</h1>
+            <h1>The SFXD wiki</h1>
             <p class="tagline">Literally one page</p>
           </div>
 
@@ -283,7 +283,7 @@ Einstein Activity Capture free with Sales Cloud</li>
 <hr />
 
 <p>This abridged version was graciously written up by the <strong>SF Discord</strong> https://discord.gg/JG4Bc4q<br/>
-We have a "website" now: https://salesforce-exchange.github.io/ it doesn't contain much more than a link to Discord but we're proud.</p>
+We have a "website" now: https://SFXD.github.io/ it doesn't contain much more than a link to Discord but we're proud.</p>
             </div>
           </article>
 
