--- a/article-convfields.html
+++ b/article-convfields.html
@@ -72,7 +72,7 @@
       <div class="container">
         <div class="page-header row">
           <div class="span8">
-            <h1>The Salesforce Exchange wiki</h1>
+            <h1>The SFXD wiki</h1>
             <p class="tagline">Literally one page</p>
           </div>
 
