--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <!-- Hero title -->
         <div class="hero-title">
-          <h1>The SaIesforce Exchange</h1>
+          <h1>SFXD</h1>
         </div>
         <!-- Hero boxes -->
         <div class="row boxes">
@@ -132,7 +132,7 @@
       <div class="main-footer">
         <div class="container">
           <div class="page-main">
-            <p>Everything we do and publish is for free, now and forever. We do not have a bank account or a paypal to receive funds for this community. The Salesforce Discord does not own the Discord or Salesforce trademarks. All respective logos are the property of the original companies. The Salesforce Discord, Salesforce Exchange, or any other name we use to describe ourselves, is non-official.</p>
+            <p>Everything we do and publish is for free, now and forever. We do not have a bank account or a paypal to receive funds for this community. The SFXD, or any other name we use to describe ourselves, is non-official.</p>
           </div> 
         </div>
       </div>
