--- a/wiki-index.html
+++ b/wiki-index.html
@@ -89,7 +89,8 @@
               <h2>
                 Abridged RN
               </h2>
-              <ul class="category-posts">    
+              <ul class="category-posts">
+                <li><i class="fas fa-font"></i> <a href="article-winter19.html">Winter 19 Abridged</a></li>
                 <li><i class="fas fa-font"></i> <a href="article-summer18.html">Summer 18 Abridged</a></li>
                 <li><i class="fas fa-font"></i> <a href="article-spring18.html">Spring 18 Abridged</a></li>                
                 <li><i class="fas fa-font"></i> <a href="article-winter18.html">Winter 18 Abridged</a></li>                
