Fixed link again

--- a/article-winter19.html
+++ b/article-winter19.html
@@ -108,7 +108,7 @@ May contain nuts</p>
 <ul>
 <li>You can <a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_lc_cdn.htm">enable the Akamai CDN</a> to load lightning experience fast as the wolves of icewrack.</li>
 <li>You can <a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_lex_remove_org_switcher.htm">prevent users from switching back to classic</a>. Remember to throw them clean water in their cell.</li>
-<li>They added a [search bar](https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_lex_search_lists.htm) to list views. If you type in that, the global one, AND open a lookup field open, you could search while you search your search.</li>
+<li>They added a <a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_lex_search_lists.htm">search bar</a> to list views. If you type in that, the global one, AND open a lookup field open, you could search while you search your search.</li>
 <li>Salesforce Surveys get better, but are still a less good GetFeedback.</li>
 <li>Service Essentials now boasts CTI and a dumbed-down community. Starts looking like a fair option for small companies.</li>
 <li>Flow Screens got <a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_forcecom_flow_design_screencmp.htm">a shit ton of small quality of life adjustments</a>. Toggles, Dependent picklists, sliders for number values, email and phone validations…</li>
